<resources>
    <string name="app_name">HospitalApp</string>
    <string name="hospital_name">Name (Hospital/Clinic)</string>
    <string name="welcome_text">Welcome to Dr. Scout</string>
    <string name="login_using">OR Login Using</string>
    <string name="text_registration">Don\'t have Account?</string>
    <string name="signUp">SignUp</string>
    <string name="login">Login</string>
    <string name="pref_for_user_data">Shared Preference For Loggedin User Data</string>
    <string name="email">Email</string>
    <string name="phoneNo">Contact Number</string>
    <string name="loginPassword">Password</string>
    <string name="department">Departments</string>
    <string name="doctors">Doctors</string>
    <string name="name_department">Name of Department</string>
    <string name="sign_up">SignUp</string>
    <string name="year_establishment">Year Of Establishment</string>
    <string name="invalid_credentials">Please fill all the fields correctly.</string>
    <string name="add_doctor">Add Doctor</string>
    <string name="doctor_name">Doctor\'s Name</string>
    <string name="career_history">Career History</string>
    <string name="learning_history">Learning History</string>
    <string name="add">Add</string>
    <string name="select_department">Please Select Department</string>
    <string name="correct">Correct</string>
    <string name="hospital_login">Login Your Account</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="reset_password">Reset Password</string>
    <string name="text_login">Already have a Account?</string>
    <string name="hospital_registration">Register As A Hospital</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>

    <string name="home_second">Home Second</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="select_availability_type">Doctor\'s Availability Type</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="select_availability_time">Doctor\'s Availability Time</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="checkup_time">Average Checkup Time (in min.)</string>
    <string name="time_to_check_single_patient">Average Time To check single Patient</string>
    <string name="select_dates">Select Dates</string>
    <string name="select">Select</string>
    <string name="department_description">Please give Some Description of this Department.</string>
    <string name="doctor_department_register_later">** You can register Your Doctors and Departments after login also.</string>
    <string name="add_department">Add A Department</string>
    <string name="title_delete_doctor">Are You suru You want to Delete Doctor?</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="contact_info">Contact Info</string>
    <string name="update">Update</string>
    <string name="title_update_doctor">Update Doctor\'s Profile</string>
    <string name="confirm">Confirm</string>
    <string name="consultation_with">Consultation With</string>

    <!--     Appointment Status-->
    <string name="pending">Pending</string>
    <string name="accepted">Accepted</string>
    <string name="rejected">Rejected</string>
    <string name="completed">Completed</string>
    <string name="not_attempted">Not Attempted</string>
    <string name="appointment_confirmed">Appointment has been Confirmed.</string>
    <string name="appointment_rejected">Appointment has been Rejected.</string>
    <string name="established_in">Established in</string>
    <string name="contact_information">Contact Information</string>
    <string name="address">Address</string>
    <string name="information">Information</string>
    <string name="your_doctors">Your Doctors</string>
    <string name="your_departments">Your Departments</string>
    <string name="authenticate">Authenticate</string>
    <string name="cancel">Cancel</string>
    <string name="save_for_profile_pic">Save For Profile Pic</string>
    <string name="appointment_for">Appointment For</string>
    <string name="patient_name">Patient Name</string>
    <string name="symptoms">Symptoms</string>
    <string name="age">Age</string>
    <string name="select_doctor">Select Doctor</string>
    <string name="book_appointment">Book Appointment</string>
    <string name="select_date">Select Date</string>
    <string name="appointment_date_time">Select Date/Time</string>
    <string name="doctor_info">Doctor Info</string>
    <string name="specialists">Specialist</string>
    <string name="change_doctor">Change Doctor</string>
    <string name="appointment_id">Appointment Id :</string>
    <string name="serial_number">Serial Number -</string>
    <string name="appointment_status">Appointment Status</string>
    <string name="serial_number_not_assigned">\"Serial Number not assigned Yet.\"</string>
    <string name="change_status">Change Status</string>
    <string name="select_appointment_status">Select Appointment Status</string>
    <string name="change_password">Change Password</string>
    <string name="change_schedule">Change Schedule</string>
    <string name="text_enter_password_again">For Security Reasons You have to Entered Your Password Again.</string>
    <string name="new_password">New Password</string>
    <string name="enter_your_new_password">Enter Your New Password</string>
    <string name="clear_filter">CLEAR FILTER</string>
    <string name="filter">FILTER</string>
    <string name="example_date">Eg. : 20-05-2020</string>
    <string name="example_time">Eg. : 11 : 00</string>
    <string name="text_loading">We are Loading More Details Please Wait...</string>
    <string name="text_no_scheduled_appointments">You Have No Scheduled Appointments\n Your Scheduled Appointments Shown here.</string>
    <string name="text_no_past_appointments">You Have No Past Appointments\n Your Past Appointments Shown here.</string>
    <string name="search">SEARCH</string>
    <string name="select_appointment_taking_schedule">Select Appointment Taking Schedule</string>
    <string name="monthly_by_default">Monthly  (By Default)</string>
    <string name="helper_text_appointment_taking_schedule">This is the time that how much advance appointments you want to consider. You can change it at any time. By Default Anyone can Book appointment with you in one month advance.</string>
    <string name="dr_scout_hospital_app">Dr Scout | Hospital App</string>

</resources>
