<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.scout.hospitalapp.Fragments.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home"/>

    <fragment
        android:id="@+id/nav_doctors"
        android:name="com.scout.hospitalapp.Fragments.DoctorsFragment"
        android:label="@string/doctors"
        tools:layout="@layout/fragment_doctors" />

    <fragment
        android:id="@+id/nav_departments"
        android:name="com.scout.hospitalapp.Fragments.DepartmentsFragment"
        android:label="@string/department"
        tools:layout="@layout/fragment_departments" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.scout.hospitalapp.Fragments.NotificationFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />
</navigation>